@@ -3,7 +3,9 @@ Changes
 
 Next
 ----
-- Add single value options to rio info command (#139).
+- Add single value options to rio info command (#139, #143).
+- Switch to console scripts entry points for rio, &c (#137).
+- Avoid unnecessary imports of Numpy in info command, elsewhere (#140).
 
 0.12.1 (2014-09-02)
 -------------------
